<resources>
    <string name="app_name">Сходины</string>
    <string name="welcome_message">Добро пожаловать!</string>
    <string name="entrance_message">Войдите в свой аккаунт</string>
    <string name="email_message">Электронная почта</string>
    <string name="password_message">Пароль</string>
    <string name="password_replay_message">Повторите пароль</string>
    <string name="enter">Войти</string>
    <string name="account_absence_message">Нет аккаунта?</string>
    <string name="registration_offer">Создать аккаунт</string>
    <string name="navigation_drawer_open">Открыть меню</string>
    <string name="navigation_drawer_close">Закрыть меню</string>
    <string name="home_header">Главная</string>
    <string name="profile_header">Профиль</string>
    <string name="settings_header">Настройки</string>
    <string name="register_header">Регистрация</string>
    <string name="register_message">Создайте аккаунт</string>
    <string name="number_phone">Номер телефона (Не обязательно)</string>
    <string name="number_phone_profile">Номер телефона</string>
    <string name="last_name">Фамилия</string>
    <string name="first_name">Имя</string>
    <string name="date_birth">Дата рождения</string>
    <string name="date_selection">Выберите дату</string>
    <string name="register">Зарегистрироваться</string>
    <string name="account_existence_message">Есть аккаунт?</string>
    <string name="authorization_offer">Войти в аккаунт</string>
    <string name="my_date_message">Мои данные</string>
    <string name="save_changes">Сохранить изменения</string>
    <string name="my_interests_message">Мои интересы</string>
    <string name="add">Добавить</string>
    <string name="soon_message">Скоро</string>
    <string name="my_events_message">Мои мероприятия</string>
    <string name="visited_events_message">Посещенные мероприятия</string>
    <string name="choose_interest_message">Выберите интересы</string>
    <string name="choose_interest_warning">Можно выбрать до 5 интересов</string>
    <string name="add_selected_interests">Добавить выбранные</string>
    <string name="age_message">Возраст: </string>
    <string name="search_name_or_address_message">Поиск по названию или адресу</string>
    <string name="age_warning_message">* На месте может быть осуществлена проверка документа удостоверяющего личность</string>
    <string name="cancel_event_warning_message">* Отменить участие можно не позднее чем за 3 дня до начала мероприятия</string>
    <string name="description_message">Описание</string>
    <string name="reviews_message">Отзывы</string>
    <string name="session_message">Сеансы</string>
    <string name="place_description">Описание места</string>
    <string name="to_write_message">Написать </string>
    <string name="your_review_message">Ваш отзыв</string>
    <string name="comment_message">Комментарий (необязательно)</string>
    <string name="review_offer_message">Напишите отзыв, например: Какое чудесное место</string>
    <string name="add_review">Добавить отзыв</string>
    <string name="delete_review">Удалить отзыв</string>
    <string name="distribution_message">Распределение оценок</string>
    <string name="map">Карта</string>
</resources>