<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/bg_bottom_sheet"
    android:paddingTop="24dp"
    android:paddingBottom="32dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_interest_message"
        android:textSize="@dimen/sections_text"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="4dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_interest_warning"
        android:textSize="@dimen/information_text"
        android:textColor="@color/text_fg"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="24dp"/>

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/allInterestsChipGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="20dp"
        app:chipSpacingHorizontal="8dp"
        app:chipSpacingVertical="8dp"
        app:singleSelection="false"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnAddSelectedInterests"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:text="@string/add_selected_interests"
        android:textColor="@color/white"
        android:textSize="@dimen/field_name"
        android:textAllCaps="false"
        app:cornerRadius="16dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="35dp"
        app:backgroundTint="@color/button_bg"/>
</LinearLayout>